Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-46806

[REG 5.4.1->5.5.0-beta] Angle: shader effect and image with alpha channel in the same window lead to a black box

    XMLWordPrintable

Details

    • 12c7d018eccb979273fe447c9a0f17b1988ccbf4

    Description

      We have a svg image as a background and an image with OpacityMask on top of it. When running with ANGLE on Qt 5.5.0-beta the masked image is black and the debug log has several D3D11 warnings like

      D3D11 WARNING: ID3D11DeviceContext::DrawIndexed: The Pixel Shader unit expects a Sampler to be set at Slot 1, but none is bound. This is perfectly valid, as a NULL Sampler maps to default Sampler state. However, the developer may not want to rely on the defaults. [ EXECUTION WARNING #352: DEVICE_DRAW_SAMPLER_NOT_SET]

      The problem is not reproducible with desktop OpenGL nor in Qt 5.4.1. In addition this happens with only some svg images.

      Attached example reproduces the problem. Change the Image source to see how it should work.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            lagocs Laszlo Agocs
            qtcomsupport Qt Support
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes